인증 모듈 추가 및 기본 OAuth 로그인 구현 : refactor : ErrorCode code에 관한 로직 삭제, List 정적으로 변경, Blacklist에 대한 ErrorCode 추가 https://github.com/TEAM-Tripgether/Tripgether-BE/issues/22